feat: :sparkles: Rotas de listagem, remoção, visualização e edição de categorias finalizadas.
